[package]
name = "bleebo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket-authorization = "1.0.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
argon2 = "0.5.3"
passwords = "3.1.16"
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
reqwest = { version = "=0.10.10", features = ["blocking"] }